[package]
name = "futures-prio"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "0.4.3"

[dev-dependencies]
futures-executor-preview = "0.3.0-alpha.19"
